# LightWeightLib

./: .gitignore  CMakeLists.txt  README.md
GTK/: CMakeLists.txt  README.md
GTK/src/: CMakeLists.txt
GTK/src/GSettings/: CMakeLists.txt  README.md
GTK/tutorial/: CMakeLists.txt
GTK/tutorial/tutorial_1/: CMakeLists.txt  tutorial_1.cpp
GTest/: CMakeLists.txt  README.md  main.cpp
GTest/unitTest/: unitTest.cpp
Glog/: README.md
MySQL/: README.md
MySQL/MYSQL_CONNECTOR_CPP_API/: CMakeLists.txt  main.cpp
MySQL/MYSQL_C_API/: CMakeLists.txt  main.cpp
MySQL/MYSQL_C_API/cmake/: FindMySQL.cmake
OpenGL/: CMakeLists.txt  README.md  main.cpp
ZeroMQ/: CMakeLists.txt  README.md
ZeroMQ/project/: CMakeLists.txt
ZeroMQ/project/ParamManager/: CMakeLists.txt  testParamManagerClient.cpp  testParamManagerServer.cpp
ZeroMQ/project/ParamManager/PubAndSub/: IPAndPort.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
ZeroMQ/project/ParamManager/idea/: ParamManager.md
ZeroMQ/project/ParamManager/idea/material/: ParamManager.dia
ZeroMQ/src/: CMakeLists.txt
ZeroMQ/src/PubAndSub/: CMakeLists.txt  PubServer.cpp  SubClient.cpp
ZeroMQ/src/helloworld/: CMakeLists.txt  HWClient.cpp
src/: CMakeLists.txt
src/GTest/: generateUnit.sh
src/GTest/unitTest/: unitTest.h
src/glog/: CMakeLists.txt  Glog.cpp
